@@ -4,7 +4,6 @@ import cn.dev33.satoken.SaManager;
 import cn.dev33.satoken.dao.SaTokenDao;
 import cn.dev33.satoken.stp.SaLoginModel;
 import cn.dev33.satoken.stp.StpUtil;
-import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import edu.jmi.openatom.server.openatomsystem.bootstrap.RoleSeedTemplate;
 import edu.jmi.openatom.server.openatomsystem.common.web.ClientIpResolver;
 import edu.jmi.openatom.server.openatomsystem.dto.ApiResponse;
@@ -13,22 +12,8 @@ import edu.jmi.openatom.server.openatomsystem.dto.request.RequestLoginDTO;
 import edu.jmi.openatom.server.openatomsystem.dto.request.RequestRegisterDTO;
 import edu.jmi.openatom.server.openatomsystem.dto.response.ResponseCurrentUserDTO;
 import edu.jmi.openatom.server.openatomsystem.dto.response.ResponseLoginDTO;
-import edu.jmi.openatom.server.openatomsystem.entity.Club;
-import edu.jmi.openatom.server.openatomsystem.entity.ClubMembership;
-import edu.jmi.openatom.server.openatomsystem.entity.LoginLog;
-import edu.jmi.openatom.server.openatomsystem.entity.Permission;
-import edu.jmi.openatom.server.openatomsystem.entity.Role;
-import edu.jmi.openatom.server.openatomsystem.entity.RolePermission;
-import edu.jmi.openatom.server.openatomsystem.entity.User;
-import edu.jmi.openatom.server.openatomsystem.entity.UserRole;
-import edu.jmi.openatom.server.openatomsystem.mapper.ClubMapper;
-import edu.jmi.openatom.server.openatomsystem.mapper.ClubMembershipMapper;
-import edu.jmi.openatom.server.openatomsystem.mapper.LoginLogMapper;
-import edu.jmi.openatom.server.openatomsystem.mapper.PermissionMapper;
-import edu.jmi.openatom.server.openatomsystem.mapper.RoleMapper;
-import edu.jmi.openatom.server.openatomsystem.mapper.RolePermissionMapper;
-import edu.jmi.openatom.server.openatomsystem.mapper.UserMapper;
-import edu.jmi.openatom.server.openatomsystem.mapper.UserRoleMapper;
+import edu.jmi.openatom.server.openatomsystem.entity.*;
+import edu.jmi.openatom.server.openatomsystem.mapper.*;
 import edu.jmi.openatom.server.openatomsystem.security.PasswordService;
 import edu.jmi.openatom.server.openatomsystem.service.AuthService;
 import edu.jmi.openatom.server.openatomsystem.service.RegistrationSettingService;
@@ -83,35 +68,22 @@ public class AuthServiceImpl implements AuthService {
         requestRegisterDTO.getStudentId() == null || requestRegisterDTO.getStudentId().isBlank()
             ? requestRegisterDTO.getUsername()
             : requestRegisterDTO.getStudentId();
-    Long count =
-        userMapper.selectCount(
-            new LambdaQueryWrapper<User>()
-                .eq(User::getStudentId, studentId)
-                .or()
-                .eq(User::getUserName, requestRegisterDTO.getUsername()));
-
+    Long count = userMapper.countByUsernameOrStudentId(requestRegisterDTO.getUsername(), studentId);
     if (count > 0) {
       return ApiResponse.error("该学号已被注册");
     }
-
-    User newUser =
-        User.builder()
-            .userName(
-                requestRegisterDTO.getUsername() == null
-                    ? studentId
-                    : requestRegisterDTO.getUsername())
-            .studentId(studentId)
-            .password(passwordService.encode(requestRegisterDTO.getPassword()))
-            .realName(requestRegisterDTO.getRealName())
-            .phone(requestRegisterDTO.getPhone())
-            .email(requestRegisterDTO.getEmail())
-            .build();
-
+    User newUser = User.builder()
+        .userName(requestRegisterDTO.getUsername() == null ? studentId : requestRegisterDTO.getUsername())
+        .studentId(studentId)
+        .password(passwordService.encode(requestRegisterDTO.getPassword()))
+        .realName(requestRegisterDTO.getRealName())
+        .phone(requestRegisterDTO.getPhone())
+        .email(requestRegisterDTO.getEmail())
+        .build();
     int rows = userMapper.insert(newUser);
     if (rows <= 0) {
       return ApiResponse.error("注册失败");
     }
-
     ApiResponse<String> bindResult = bindProbationaryMemberRole(newUser.getId());
     if (bindResult.getCode() != ApiResponse.SUCCESS_CODE) {
       return bindResult;
@@ -120,34 +92,22 @@ public class AuthServiceImpl implements AuthService {
     if (membershipResult.getCode() != ApiResponse.SUCCESS_CODE) {
       return membershipResult;
     }
-
     return ApiResponse.success("注册成功");
   }
 
   @Override
   public ApiResponse<ResponseLoginDTO> login(RequestLoginDTO requestLoginDTO) {
-    if (requestLoginDTO == null
-        || requestLoginDTO.getUsername() == null
-        || requestLoginDTO.getPassword() == null) {
+    if (requestLoginDTO == null || requestLoginDTO.getUsername() == null || requestLoginDTO.getPassword() == null) {
       return ApiResponse.error("用户名或密码不能为空");
     }
-
-    User user =
-        userMapper.selectOne(
-            new LambdaQueryWrapper<User>()
-                .eq(User::getStudentId, requestLoginDTO.getUsername())
-                .or()
-                .eq(User::getUserName, requestLoginDTO.getUsername()));
-
+    User user = userMapper.selectByStudentIdOrUserName(requestLoginDTO.getUsername());
     if (user == null) {
       return ApiResponse.error("登陆失败,请检查用户名/密码");
     }
-
     if (!passwordService.matches(requestLoginDTO.getPassword(), user.getPassword())) {
       return ApiResponse.error("登陆失败,请检查用户名/密码");
     }
     upgradePasswordIfNecessary(user, requestLoginDTO.getPassword());
-
     recordLoginLog(user.getId());
     return ApiResponse.success(createLoginResponse(user), "登陆成功");
   }
@@ -157,37 +117,31 @@ public class AuthServiceImpl implements AuthService {
     if (refreshToken == null || refreshToken.isBlank()) {
       return ApiResponse.error("refreshToken不能为空");
     }
-
     SaTokenDao tokenDao = SaManager.getSaTokenDao();
     String loginId = tokenDao.get(getRefreshTokenKey(refreshToken));
     if (loginId == null) {
       return ApiResponse.error(401, "refreshToken无效或已过期");
     }
-
     User user = userMapper.selectById(Integer.valueOf(loginId));
     if (user == null) {
       tokenDao.delete(getRefreshTokenKey(refreshToken));
       tokenDao.delete(getRefreshUserKey(loginId));
       return ApiResponse.error(401, "用户不存在");
     }
-
     tokenDao.delete(getRefreshTokenKey(refreshToken));
     tokenDao.delete(getRefreshUserKey(loginId));
-
     return ApiResponse.success(createLoginResponse(user), "刷新成功");
   }
 
   @Override
   public ApiResponse<String> logout(String refreshToken) {
     SaTokenDao tokenDao = SaManager.getSaTokenDao();
-
     if (StpUtil.isLogin()) {
       String loginId = StpUtil.getLoginIdAsString();
       clearRefreshTokenByLoginId(loginId, tokenDao);
       StpUtil.logout();
       return ApiResponse.success("退出成功");
     }
-
     if (refreshToken != null && !refreshToken.isBlank()) {
       String loginId = tokenDao.get(getRefreshTokenKey(refreshToken));
       clearRefreshTokenByValue(refreshToken, tokenDao);
@@ -196,7 +150,6 @@ public class AuthServiceImpl implements AuthService {
       }
       return ApiResponse.success("退出成功");
     }
-
     return ApiResponse.error(401, "当前未登录");
   }
 
@@ -207,42 +160,27 @@ public class AuthServiceImpl implements AuthService {
     if (user == null) {
       return ApiResponse.error(404, "用户不存在");
     }
-
     AuthSnapshot snapshot = buildAuthSnapshot(userId);
-
     return ApiResponse.success(
-        ResponseCurrentUserDTO.builder()
-            .user(buildSafeUser(user))
-            .roles(snapshot.roles())
-            .permissions(snapshot.permissions())
-            .build());
+        ResponseCurrentUserDTO.builder().user(buildSafeUser(user))
+            .roles(snapshot.roles()).permissions(snapshot.permissions()).build());
   }
 
   @Override
   public ApiResponse<Boolean> updateRegisterEnabled(Boolean enabled) {
-    if (enabled == null) {
-      return ApiResponse.error(400, "注册开关不能为空");
-    }
-    if (!StpUtil.isLogin()) {
-      return ApiResponse.error(401, "请先登录");
-    }
-    if (!StpUtil.hasRole("super_admin")) {
-      return ApiResponse.error(403, "仅系统管理员可修改注册开关");
-    }
-    return ApiResponse.success(
-        registrationSettingService.updateRegisterEnabled(enabled), "注册开关更新成功");
+    if (enabled == null) return ApiResponse.error(400, "注册开关不能为空");
+    if (!StpUtil.isLogin()) return ApiResponse.error(401, "请先登录");
+    if (!StpUtil.hasRole("super_admin")) return ApiResponse.error(403, "仅系统管理员可修改注册开关");
+    return ApiResponse.success(registrationSettingService.updateRegisterEnabled(enabled), "注册开关更新成功");
   }
 
   @Override
   public ApiResponse<String> changePassword(RequestChangePassword requestChangePassword) {
-    if (requestChangePassword == null
-        || requestChangePassword.getOldPassword() == null
+    if (requestChangePassword == null || requestChangePassword.getOldPassword() == null
         || requestChangePassword.getNewPassword() == null) {
       return ApiResponse.error("密码不能为空");
     }
-    if (!StpUtil.isLogin()) {
-      return ApiResponse.error(401, "请先登录");
-    }
+    if (!StpUtil.isLogin()) return ApiResponse.error(401, "请先登录");
     int id = StpUtil.getLoginIdAsInt();
     User user = userMapper.selectById(id);
     if (!passwordService.matches(requestChangePassword.getOldPassword(), user.getPassword())) {
@@ -258,48 +196,25 @@ public class AuthServiceImpl implements AuthService {
     StpUtil.login(user.getId(), new SaLoginModel());
     user.setLastLoginAt(new Timestamp(System.currentTimeMillis()));
     userMapper.updateById(user);
-
     String accessToken = StpUtil.getTokenValue();
     String refreshToken = rotateRefreshToken(user.getId());
     AuthSnapshot snapshot = buildAuthSnapshot(user.getId());
-
-    return ResponseLoginDTO.builder()
-        .accessToken(accessToken)
-        .refreshToken(refreshToken)
+    return ResponseLoginDTO.builder().accessToken(accessToken).refreshToken(refreshToken)
         .expiresIn((int) Math.min(StpUtil.getTokenTimeout(), Integer.MAX_VALUE))
-        .user(buildSafeUser(user))
-        .roles(snapshot.roles())
-        .permissions(snapshot.permissions())
-        .build();
+        .user(buildSafeUser(user)).roles(snapshot.roles()).permissions(snapshot.permissions()).build();
   }
 
   private AuthSnapshot buildAuthSnapshot(Integer userId) {
-    List<UserRole> userRoles =
-        userRoleMapper.selectList(
-            new LambdaQueryWrapper<UserRole>().eq(UserRole::getUserId, userId));
-    List<Integer> roleIds =
-        userRoles.stream().map(UserRole::getRoleId).distinct().collect(Collectors.toList());
-
-    List<Role> roles =
-        roleIds.isEmpty() ? Collections.emptyList() : roleMapper.selectBatchIds(roleIds);
-    List<String> roleCodes =
-        roles.stream().map(Role::getCode).filter(code -> code != null && !code.isBlank()).toList();
-
+    List<UserRole> userRoles = userRoleMapper.selectByUserId(userId);
+    List<Integer> roleIds = userRoles.stream().map(UserRole::getRoleId).distinct().collect(Collectors.toList());
+    List<Role> roles = roleIds.isEmpty() ? Collections.emptyList() : roleMapper.selectBatchIds(roleIds);
+    List<String> roleCodes = roles.stream().map(Role::getCode).filter(c -> c != null && !c.isBlank()).toList();
     List<RolePermission> rolePermissions =
-        roleIds.isEmpty()
-            ? Collections.emptyList()
-            : rolePermissionMapper.selectList(
-                new LambdaQueryWrapper<RolePermission>().in(RolePermission::getRoleId, roleIds));
-    List<Integer> permissionIds =
-        rolePermissions.stream()
-            .map(RolePermission::getPermissionId)
-            .distinct()
-            .collect(Collectors.toList());
-
+        roleIds.isEmpty() ? Collections.emptyList() : rolePermissionMapper.selectByRoleIds(roleIds);
+    List<Integer> permissionIds = rolePermissions.stream()
+        .map(RolePermission::getPermissionId).distinct().collect(Collectors.toList());
     List<Permission> permissions =
-        permissionIds.isEmpty()
-            ? Collections.emptyList()
-            : permissionMapper.selectBatchIds(permissionIds);
+        permissionIds.isEmpty() ? Collections.emptyList() : permissionMapper.selectBatchIds(permissionIds);
     Set<String> permissionCodes = new LinkedHashSet<>();
     for (Permission permission : permissions) {
       if (permission.getCode() != null && !permission.getCode().isBlank()) {
@@ -313,13 +228,9 @@ public class AuthServiceImpl implements AuthService {
     SaTokenDao tokenDao = SaManager.getSaTokenDao();
     String userKey = getRefreshUserKey(String.valueOf(userId));
     String oldRefreshToken = tokenDao.get(userKey);
-    if (oldRefreshToken != null) {
-      tokenDao.delete(getRefreshTokenKey(oldRefreshToken));
-    }
-
+    if (oldRefreshToken != null) tokenDao.delete(getRefreshTokenKey(oldRefreshToken));
     String refreshToken = UUID.randomUUID().toString().replace("-", "");
-    tokenDao.set(
-        getRefreshTokenKey(refreshToken), String.valueOf(userId), REFRESH_TOKEN_TIMEOUT_SECONDS);
+    tokenDao.set(getRefreshTokenKey(refreshToken), String.valueOf(userId), REFRESH_TOKEN_TIMEOUT_SECONDS);
     tokenDao.set(userKey, refreshToken, REFRESH_TOKEN_TIMEOUT_SECONDS);
     return refreshToken;
   }
@@ -327,9 +238,7 @@ public class AuthServiceImpl implements AuthService {
   private void clearRefreshTokenByLoginId(String loginId, SaTokenDao tokenDao) {
     String userKey = getRefreshUserKey(loginId);
     String refreshToken = tokenDao.get(userKey);
-    if (refreshToken != null) {
-      tokenDao.delete(getRefreshTokenKey(refreshToken));
-    }
+    if (refreshToken != null) tokenDao.delete(getRefreshTokenKey(refreshToken));
     tokenDao.delete(userKey);
   }
 
@@ -339,16 +248,12 @@ public class AuthServiceImpl implements AuthService {
 
   private void recordLoginLog(Integer userId) {
     HttpServletRequest request = null;
-    if (RequestContextHolder.getRequestAttributes()
-        instanceof ServletRequestAttributes attributes) {
+    if (RequestContextHolder.getRequestAttributes() instanceof ServletRequestAttributes attributes) {
       request = attributes.getRequest();
     }
-    loginLogMapper.insert(
-        LoginLog.builder()
-            .userId(userId)
-            .ip(clientIpResolver.resolve(request))
-            .userAgent(request == null ? null : request.getHeader("User-Agent"))
-            .build());
+    loginLogMapper.insert(LoginLog.builder().userId(userId)
+        .ip(clientIpResolver.resolve(request))
+        .userAgent(request == null ? null : request.getHeader("User-Agent")).build());
   }
 
   private void upgradePasswordIfNecessary(User user, String rawPassword) {
@@ -360,45 +265,19 @@ public class AuthServiceImpl implements AuthService {
 
   private ApiResponse<String> bindProbationaryMemberRole(Integer userId) {
     String roleCode = RoleSeedTemplate.probationaryMember().code();
-    Role role = roleMapper.selectOne(new LambdaQueryWrapper<Role>().eq(Role::getCode, roleCode));
-    if (role == null) {
-      return ApiResponse.error(500, "默认非正式成员角色未初始化");
-    }
-
-    UserRole exists =
-        userRoleMapper.selectOne(
-            new LambdaQueryWrapper<UserRole>()
-                .eq(UserRole::getUserId, userId)
-                .eq(UserRole::getRoleId, role.getId()));
+    Role role = roleMapper.selectByCode(roleCode);
+    if (role == null) return ApiResponse.error(500, "默认非正式成员角色未初始化");
+    UserRole exists = userRoleMapper.selectOneByUserAndRole(userId, role.getId());
     if (exists == null) {
       userRoleMapper.insert(UserRole.builder().userId(userId).roleId(role.getId()).build());
     }
-
     return ApiResponse.success();
   }
 
   private ApiResponse<String> bindDefaultClubMembership(Integer userId) {
-    Club club =
-        clubMapper.selectOne(
-            new LambdaQueryWrapper<Club>().eq(Club::getCode, DEFAULT_CLUB_CODE).last("LIMIT 1"));
-    if (club == null) {
-      club =
-          clubMapper.selectOne(
-              new LambdaQueryWrapper<Club>()
-                  .eq(Club::getStatus, "active")
-                  .orderByAsc(Club::getId)
-                  .last("LIMIT 1"));
-    }
-    if (club == null) {
-      return ApiResponse.error(500, "默认社团未初始化");
-    }
-    ClubMembership exists =
-        clubMembershipMapper.selectOne(
-            new LambdaQueryWrapper<ClubMembership>()
-                .eq(ClubMembership::getUserId, userId)
-                .eq(ClubMembership::getClubId, club.getId())
-                .isNull(ClubMembership::getLeftAt)
-                .last("LIMIT 1"));
+    Club club = clubMapper.selectDefaultClub(DEFAULT_CLUB_CODE);
+    if (club == null) return ApiResponse.error(500, "默认社团未初始化");
+    ClubMembership exists = clubMembershipMapper.selectActiveMembership(userId, club.getId());
     if (exists == null) {
       clubMembershipMapper.insert(
           ClubMembership.builder().userId(userId).clubId(club.getId()).status("probation").build());
@@ -407,31 +286,15 @@ public class AuthServiceImpl implements AuthService {
   }
 
   private User buildSafeUser(User user) {
-    return User.builder()
-        .id(user.getId())
-        .userName(user.getUserName())
-        .realName(user.getRealName())
-        .gender(user.getGender())
-        .phone(user.getPhone())
-        .email(user.getEmail())
-        .studentId(user.getStudentId())
-        .college(user.getCollege())
-        .major(user.getMajor())
-        .grade(user.getGrade())
-        .avatar(user.getAvatar())
-        .userStatus(user.getUserStatus())
-        .createTime(user.getCreateTime())
-        .lastLoginAt(user.getLastLoginAt())
-        .build();
+    return User.builder().id(user.getId()).userName(user.getUserName()).realName(user.getRealName())
+        .gender(user.getGender()).phone(user.getPhone()).email(user.getEmail())
+        .studentId(user.getStudentId()).college(user.getCollege()).major(user.getMajor())
+        .grade(user.getGrade()).avatar(user.getAvatar()).userStatus(user.getUserStatus())
+        .createTime(user.getCreateTime()).lastLoginAt(user.getLastLoginAt()).build();
   }
 
-  private String getRefreshTokenKey(String refreshToken) {
-    return REFRESH_TOKEN_KEY_PREFIX + refreshToken;
-  }
-
-  private String getRefreshUserKey(String loginId) {
-    return REFRESH_USER_KEY_PREFIX + loginId;
-  }
+  private String getRefreshTokenKey(String refreshToken) { return REFRESH_TOKEN_KEY_PREFIX + refreshToken; }
+  private String getRefreshUserKey(String loginId) { return REFRESH_USER_KEY_PREFIX + loginId; }
 
   private record AuthSnapshot(List<String> roles, List<String> permissions) {}
 }
